--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -2,6 +2,28 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 10px;
-  opacity: 0.6;
+  margin-bottom: 30px;
+  opacity: 0.7;
+  position: relative;
+}
+
+.status-bar i {
+  font-size: 14px;
+}
+
+.status-bar .fa-battery-three-quarters {
+  margin-left: 7px;
+}
+
+.status-bar .status-bar__column-time {
+  position: absolute;
+  left: calc(50% - 30px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+}
+
+.status-bar .status-bar__column span {
+  font-size: 13px;
 }
