--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ a {
 
 main {
   animation: fadeIn 0.5s ease-in-out;
-  height: 90vh;
+  /* height: 90vh; */
   margin-top: 130px;
 }
 
@@ -89,7 +89,7 @@ main {
 }
 
 .show-avatar {
-  z-index: 1;
+  z-index: 0;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -102,7 +102,7 @@ main {
 }
 
 .show-avatar img {
-  animation: popup-avatar 1s ease-in-out 0.4s;
+  animation: popup-avatar 1s ease-in-out 0.7s;
   opacity: 0;
 }
 
