--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ a {
 
 main {
   animation: fadeIn 0.5s ease-in-out;
-  /* height: 90vh; */
+  height: calc(100vh - 130px + 50px);
   margin-top: 130px;
 }
 
